# tracs

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bikecitizens.md  internals.md  mkdocs.yml  polar.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  strava.md  waze.md
docs/: activities.md  cli.md  filter.md  filters.md  index.md  internals.md  local.md  plugins.md  requirements.txt  start.md  strava.md  waze.md
gtrac/: __main__.py  base.py  dataclasses.py  db_middleware.py  db_storage.py  group.py  io.py  service.py  setup.py  ui.py  validate.py
gtrac/config/: __init__.py
gtrac/plugins/: base.py  empty.py  waze.py
settings/run_configurations/: fetch (bikecitizens).run.xml  fetch (polar).run.xml  fetch (strava).run.xml  fetch (waze).run.xml  pipdeptree --reverse.run.xml  pipdeptree.run.xml  pytest all.run.xml  test_activity.run.xml  test_bikecitizens_service.run.xml  test_dataclasses.run.xml  test_db.py.run.xml  test_db_middleware.run.xml  test_filters.run.xml  test_polar_activity.run.xml  test_polar_service.run.xml  test_strava_service.run.xml
test/: bikecitizens_server.py  conftest.py  fixtures.py  helpers.py  mock.py  mock_service.py  objects.py  polar_server.py  strava_server.py  test_activity.py  test_activity_types.py  test_aio.py  test_application.py  test_bikecitizens.py  test_bikecitizens_service.py  test_cattrs.py  test_cfg.py  test_cli.py  test_cli2.py  test_core.py  test_dataclass_factory.py  test_dataclasses.py  test_dataclasses_mw.py  test_db.py  test_db_middleware.py  test_db_storage.py  test_decorators.py  test_factory.py  test_filters.py  test_fsio.py  test_group.py  test_handlers.py  test_io.py  test_keywords.py  test_local.py  test_plugins.py  test_polar.py  test_polar_activity.py  test_polar_service.py  test_registry.py  (+12 more)
test/configurations/: .gitignore
test/configurations/debug/: config.yaml  state.yaml
test/configurations/debug/db/: db.json
test/configurations/default/: config.yaml  state.yaml
test/configurations/live/: state.yaml.sample
test/databases/: .gitignore  README.md  default.db.json  polar.db.json  storage.json  strava.db.json
test/databases/default/: activities.json  resources.json
test/databases/parts/: activities.json  resources.json
test/environments/debug/: config.yaml
test/environments/default/: config.yaml
test/environments/default/db/: activities.json  metadata.json  resources.json
test/environments/default/takeouts/drivey/: drive-20240825-160655.gpx  drive-20240825-161341.gpx  drive-20240825-180423.gpx  drive-20240826-132945.gpx  drive-20240826-162144.gpx  drive-20240826-180357.gpx  drive-20240827-124936.gpx  drive-20240827-125328.gpx  drive-20240827-151044.gpx  drive-20240827-165524.gpx  drive-20240828-073634.gpx  drive-20240828-110534.gpx  drive-20240828-112112.gpx  drive-20240913-182956.gpx
test/environments/default/takeouts/waze/2023-04/: account_info.csv
test/environments/live/: config.yaml  config.yaml.sample  state.yaml
test/environments/live/takeouts/waze/2022-01/: account_activity_3.csv
test/environments/local/: config.yaml
test/environments/parts/db/: resources.json
test/libraries/default/: activities.json  db.json  metadata.json  resources.json
test/libraries/default/takeouts/waze/01/: account_activity_3.csv
test/takeouts/waze/waze/2020-09/: account_activity_3.csv
test/takeouts/waze/waze/2022-01/: account_info.csv
test/takeouts/waze/waze/2023-04/: account_activity_3.csv
test/templates/polar/: 2020.json  ajaxlogin.html  all.json  empty.csv  empty.gpx  empty.hrv  empty.tcx  index.html  login.html
test/templates/polar/personal_trainer/: 20160904.gpx  20160904.xml
test/templates/strava/: session.html  weblogin.html
test/templates/waze/: .gitignore
tracs/: __init__.py  activity.py  activity_types.py  aio.py  application.py  base.py  cli.py  config.py  config_default.yaml  core.py  dataclasses.py  db.py  db_middleware.py  db_storage.py  edit.py  errors.py  fields.py  filters.py  fs.py  fsio.py  gpx.py  group.py  handlers.py  inout.py  inspct.py  inspect.py  io.py  link.py  list.py  migrate.py  plugin.py  pluginmgr.py  plugins.py  protocols.py  queries.py  registry.py  resources.py  rules.py  rules_parser.py  service.py  (+8 more)
tracs/config/: __init__.py  config.yaml  state.yaml
tracs/db/: meta.json
tracs/defaults/: config.yaml  state.yaml
tracs/plugins/: __init__.py  base.py  bikecitizens.py  config_default.yaml  csv.py  empty.py  fields.py  fit.py  gpx.py  groups.py  handlers.py  icons.py  image.py  json.py  keywords.py  local.py  plugin.py  polar.py  rule_extensions.py  state_default.yaml  strava.py  stravaconstants.py  stravaweb.py  tcx.py  waze.py  xml.py
tracs/resources/: config.yaml  state.yaml
tracs/ui/: __init__.py  tables.py  utils.py
(+27 files in other folders)
