[project]
name = "tracs"
authors = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
maintainers = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
version = "0.1.0"
description = "Command Line Manager for GPS Tracks"
readme = "README.md"
keywords = ["cli", "terminal", "command line", "gps", "gpx", "tcx"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.10'
dependencies = [
    'arrow~=1.3.0',
    'attrs~=23.2.0',
    'beautifulsoup4~=4.12.2',
    'Babel~=2.15.0',
    'cattrs~=23.2.2',
    'click~=8.1.7',
    'click-shell~=2.1.0',
    'DateTimeRange~=2.3.0',
    'dynaconf~=3.2.5',
    'fs~=2.4.16',
    'geojson~=3.1.0',
    'gpxpy~=1.6.1',
    'lxml~=5.2.0',
    'more-itertools~=10.3.0',
    'oauthlib~=3.2.2',
    'orjson~=3.10.2',
    'platformdirs~=4.2.0',
    'python-dateutil~=2.9.0',
    'PyYAML~=6.0.1',
    'requests~=2.32.3',
    'requests-cache~=1.2.0',
    'requests-oauthlib~=2.0.0',
    'rich~=13.7.0',
    'rule-engine~=4.5.0',
    'stravalib~=1.7.0',
    'tcxreader~=0.4.4',
    'tzlocal~=5.2',
]

[project.optional-dependencies]
dev = [
    'bumpver~=2023.1129',
    'flit~=3.9.0',
    'mkdocs~=1.6.0',
    'mkdocs-click~=0.8.1',
    'mkdocs-material~=9.5.2',
    'pytest~=8.3.1',
]

[project.urls]
"Homepage" = "https://github.com/fortysix2ahead/tracs/"
"Source Code" = "https://github.com/fortysix2ahead/tracs/"
"Issue Tracker" = "https://github.com/fortysix2ahead/tracs/issues/"
Documentation = "https://tracs.readthedocs.io/"
Source = "https://github.com/fortysix2ahead/tracs/"

[project.scripts]
tracs = "tracs.__main__:main"

# [build-system]
# requires = ["setuptools>=61.0.0", "wheel"]
# build-backend = "setuptools.build_meta"
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-INC0]"
commit_message = "Increased version from {old_version} to {new_version}"
tag_message = "release/{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
# "setup.py" = ["{version}", "{pep440_version}", ]
# "README.md" = ["{version}", "{pep440_version}",]
"tracs/__init__.py" = [ '{version}' ]
