[metadata]
name=tracs
version=0.1.0

[options]
packages = tracs
install_requires =
  arrow~=1.2.0
  babel~=2.12.1
  beautifulsoup4~=4.12.0
  click~=8.1.0
  click-shell~=2.1.0
  confuse~=2.0.1
  dataclass-factory~=2.16.0
  datetimerange~=2.1.0
  fs~=2.4.0
  geojson~=3.0.1
  gpxpy~=1.5.0
  lxml~=4.9.0
  orjson~=3.8.9
  python-dateutil~=2.8.0
  requests~=2.28.2
  requests-cache~=1.0.1
  requests-oauthlib~=1.3.0
  rich~=13.3.3
  rule-engine~=3.5.1
  tcxreader~=0.4.4
  tinydb~=4.7.0
  tzlocal~=4.3.0

[options.extras_require]
extras =
  bottle~=0.12.25
  pytest~=7.2.2

[options.entry_points]
console_scripts =
  tracs=tracs.__main__:main
