[metadata]
name=tracs
version=0.1.0

[options]
packages = tracs
install_requires =
  appdirs~=1.4.4
  arrow~=1.2.0
  babel~=2.12.1
  beautifulsoup4~=4.12.2
  click~=8.1.6
  click-shell~=2.1.0
  confuse~=2.0.1
  dataclass-factory~=2.16.0
  datetimerange~=2.1.0
  fs~=2.4.0
  geojson~=3.0.1
  gpxpy~=1.5.0
  lxml~=4.9.0
  orjson~=3.9.1
  pyyaml~=6.0.1
  python-dateutil~=2.8.0
  requests~=2.31.0
  requests-cache~=1.1.0
  requests-oauthlib~=1.3.0
  rich~=13.5.1
  rule-engine~=3.6.0
  stravalib~=1.3.1
  tcxreader~=0.4.4
  tzlocal~=5.0.1

[options.extras_require]
extras =
  bottle~=0.12.25
  mkdocs~=1.5.1
  mkdocs-click~=0.8.0
  mkdocs-material~=9.1.21
  pytest~=7.4.0

[options.entry_points]
console_scripts =
  tracs=tracs.__main__:main
