[metadata]
name=tracs
version=0.1.0

[options]
packages = tracs
install_requires =
  appdirs~=1.4.4
  arrow~=1.3.0
  attrs~=23.1.0
  babel~=2.13.0
  beautifulsoup4~=4.12.2
  cattrs~=23.1.2
  click~=8.1.7
  click-shell~=2.1.0
  confuse~=2.0.1
  dataclass-factory~=2.16.0
  datetimerange~=2.2.0
  fs~=2.4.0
  geojson~=3.0.1
  gpxpy~=1.5.0
  lxml~=4.9.0
  orjson~=3.9.9
  pyyaml~=6.0.1
  python-dateutil~=2.8.0
  requests~=2.31.0
  requests-cache~=1.1.0
  requests-oauthlib~=1.3.0
  rich~=13.6.0
  rule-engine~=4.1.0
  stravalib~=1.4.0
  tcxreader~=0.4.4
  tzlocal~=5.1.0

[options.extras_require]
extras =
  bottle~=0.12.25
  mkdocs~=1.5.3
  mkdocs-click~=0.8.1
  mkdocs-material~=9.4.4
  pytest~=7.4.2

[options.entry_points]
console_scripts =
  tracs=tracs.__main__:main
